plugins/qpa: Clip buffer damage

Buffer damage must remain confined to the buffer rect.

BUG: 498446


(cherry picked from commit 8073f1380166d328ad24cf2e066260c18c1a1a2e)

Co-authored-by: Vlad Zahorodnii <vlad.zahorodnii@kde.org>